--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <ul class="team-list list">
           <li class="team-card">
-            <img src="./images/barbers/john.jpg" alt="John Smith" class="img" />
+            <img src="./images/team/john.jpg" alt="John Smith" class="img" />
             <div class="team-card__title">
               <h3 class="team-card__name">John Smith</h3>
               <p class="team-card__text">Extreme Barber</p>
@@ -254,7 +254,7 @@
           </li>
 
           <li class="team-card">
-            <img src="./images/barbers/michele.jpg" alt="Michele Doe" class="img" />
+            <img src="./images/team/michele.jpg" alt="Michele Doe" class="img" />
             <div class="team-card__title">
               <h3 class="team-card__name">Michele Doe</h3>
               <p class="team-card__text">Extreme Barber</p>
@@ -293,7 +293,7 @@
           </li>
 
           <li class="team-card">
-            <img src="./images/barbers/alan.jpg" alt="Alan Black" class="img" />
+            <img src="./images/team/alan.jpg" alt="Alan Black" class="img" />
             <div class="team-card__title">
               <h3 class="team-card__name">Alan Black</h3>
               <p class="team-card__text">Extreme Barber</p>
