--- a/index.html
+++ b/index.html
@@ -558,5 +558,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
