--- a/index.html
+++ b/index.html
@@ -48,12 +48,31 @@
             </li>
           </ul>
         </div>
-        <a class="" href="index.html">
-          <svg class="logo">
-            <use href="./images/icons.svg#icon-logo"></use>
-          </svg>
-        </a>
+
         <header class="header">
+          <div class="media">
+            <ul class="media-links list">
+              <li class="media-links__item">
+                <a
+                  class="link"
+                  href="https://Instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Instagram</a
+                >
+              </li>
+              <li class="media-links__item">
+                <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+          <a class="" href="index.html">
+            <svg class="logo">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
           <nav class="">
             <ul class="header-nav">
               <li class="header-nav__item"><a class="header-link" href="#about">About</a></li>
@@ -66,76 +85,62 @@
           </nav>
           <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
           <button class="btn-light head" type="button" data-modal-open>ONLINE-BOOKING</button>
-        </header>
-        <div class="media">
-          <ul class="media-links list">
-            <li class="media-links__item">
-              <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
-                >Instagram</a
-              >
-            </li>
-            <li class="media-links__item">
-              <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
-                >Youtube</a
-              >
-            </li>
-          </ul>
-        </div>
-        <button
-          class="menu-toggle js-open-menu"
-          type="button"
-          name="menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
-          <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-            <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
-          </svg>
-        </button>
-        <div class="menu-container js-menu-container" id="mobile-menu">
-          <button class="menu-toggle js-close-menu" type="button" name="menu">
+          <button
+            class="menu-toggle js-open-menu"
+            type="button"
+            name="menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
             <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-              <use class="icon-cross" href="./images/icons.svg#icon-cross"></use>
+              <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
-          <ul class="mobile-nav">
-            <li class="mobile-nav__item">
-              <a class="mobile-nav__link--active" href="./index.html">Студія</a>
-            </li>
-            <li class="mobile-nav__item">
-              <a class="mobile-nav__link" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li class="mobile-nav__item">
-              <a class="mobile-nav__link" href="#contacts">Контакти</a>
-            </li>
-          </ul>
-          <div class="mobile-info">
-            <ul class="mobile-contact">
-              <li class="mobile-contact__item">
-                <a class="mobile-contact__tel" href="tel:+380961111111"> +38 096 111 11 11 </a>
+          <div class="menu-container js-menu-container" id="mobile-menu">
+            <button class="menu-toggle js-close-menu" type="button" name="menu">
+              <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
+                <use class="icon-cross" href="./images/icons.svg#icon-cross"></use>
+              </svg>
+            </button>
+            <ul class="mobile-nav">
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link--active" href="./index.html">Студія</a>
               </li>
-              <li class="mobile-contact__item">
-                <a class="mobile-contact__mail" href="mailto:info@devstudio.com">
-                  info@devstudio.com
-                </a>
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="./portfolio.html">Портфоліо</a>
+              </li>
+              <li class="mobile-nav__item">
+                <a class="mobile-nav__link" href="#contacts">Контакти</a>
               </li>
             </ul>
-            <ul class="mobile-social">
-              <li class="mobile-social__item">
-                <a href="" class="mobile-social__link">Instagram</a>
-              </li>
-              <li class="mobile-social__item">
-                <a href="" class="mobile-social__link">Twitter</a>
-              </li>
-              <li class="mobile-social__item">
-                <a href="" class="mobile-social__link">Facebook</a>
-              </li>
-              <li class="mobile-social__item">
-                <a href="" class="mobile-social__link">LinkedIn</a>
-              </li>
-            </ul>
+            <div class="mobile-info">
+              <ul class="mobile-contact">
+                <li class="mobile-contact__item">
+                  <a class="mobile-contact__tel" href="tel:+380961111111"> +38 096 111 11 11 </a>
+                </li>
+                <li class="mobile-contact__item">
+                  <a class="mobile-contact__mail" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+              <ul class="mobile-social">
+                <li class="mobile-social__item">
+                  <a href="" class="mobile-social__link">Instagram</a>
+                </li>
+                <li class="mobile-social__item">
+                  <a href="" class="mobile-social__link">Twitter</a>
+                </li>
+                <li class="mobile-social__item">
+                  <a href="" class="mobile-social__link">Facebook</a>
+                </li>
+                <li class="mobile-social__item">
+                  <a href="" class="mobile-social__link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
+        </header>
       </div>
     </section>
 
@@ -427,10 +432,16 @@
                   id="username"
                   placeholder="name*"
                 />
-              </div class="booking-form__item">
-              <div>
+              </div>
+              <div class="booking-form__item">
                 <label class="booking-form__label" for="tel"></label>
-                <input type="tel" class="booking-form__input" name="tel" id="tel" placeholder="phone*" />
+                <input
+                  type="tel"
+                  class="booking-form__input"
+                  name="tel"
+                  id="tel"
+                  placeholder="phone*"
+                />
               </div>
             </div>
             <label class="booking-form__label" for="comment"></label>
@@ -478,7 +489,9 @@
               </ul>
             </address>
             <p class="contacts__hours-title">working hours</p>
-            <p class="contacts__hours-time">Every day from <time>09:00</time> to <time>22:00</time></p>
+            <p class="contacts__hours-time">
+              Every day from <time>09:00</time> to <time>22:00</time>
+            </p>
           </div>
         </div>
       </section>
@@ -545,7 +558,12 @@
             <label class="modal-checkbox__label" for="agreement"
               >I agree with the mailing and accept it
               <a class="modal-checkbox__link" href="">Terms of the contract</a>
-              <input type="checkbox" class="modal-checkbox__input" name="agreement" id="agreement" />
+              <input
+                type="checkbox"
+                class="modal-checkbox__input"
+                name="agreement"
+                id="agreement"
+              />
               <svg class="modal-checkbox__check">
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
