--- a/index.html
+++ b/index.html
@@ -93,52 +93,29 @@
             aria-controls="mobile-menu"
           >
             <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-              <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+              <use class="menu-toggle__icon" href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
           <div class="menu-container js-menu-container" id="mobile-menu">
             <button class="menu-toggle js-close-menu" type="button" name="menu">
               <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-                <use class="icon-cross" href="./images/icons.svg#icon-cross"></use>
+                <use class="menu-toggle__cross" href="./images/icons.svg#icon-cross"></use>
               </svg>
             </button>
             <ul class="mobile-nav">
+              <li class="mobile-nav__item"><a class="mobile-nav__link" href="#about">About</a></li>
               <li class="mobile-nav__item">
-                <a class="mobile-nav__link--active" href="./index.html">Студія</a>
+                <a class="mobile-nav__link" href="#services">Services and prices</a>
               </li>
               <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="./portfolio.html">Портфоліо</a>
+                <a class="mobile-nav__link" href="#barbers">Barbers</a>
               </li>
               <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="#contacts">Контакти</a>
+                <a class="mobile-nav__link" href="#contacts">Contacts</a>
               </li>
             </ul>
-            <div class="mobile-info">
-              <ul class="mobile-contact">
-                <li class="mobile-contact__item">
-                  <a class="mobile-contact__tel" href="tel:+380961111111"> +38 096 111 11 11 </a>
-                </li>
-                <li class="mobile-contact__item">
-                  <a class="mobile-contact__mail" href="mailto:info@devstudio.com">
-                    info@devstudio.com
-                  </a>
-                </li>
-              </ul>
-              <ul class="mobile-social">
-                <li class="mobile-social__item">
-                  <a href="" class="mobile-social__link">Instagram</a>
-                </li>
-                <li class="mobile-social__item">
-                  <a href="" class="mobile-social__link">Twitter</a>
-                </li>
-                <li class="mobile-social__item">
-                  <a href="" class="mobile-social__link">Facebook</a>
-                </li>
-                <li class="mobile-social__item">
-                  <a href="" class="mobile-social__link">LinkedIn</a>
-                </li>
-              </ul>
-            </div>
+            <a class="mobile-nav__link" href="tel:+380441111111">+38 044 111 11 11</a>
+            <button class="btn-dark__mobile" type="button">ONLINE-BOOKING</button>
           </div>
         </header>
       </div>
