about mobile done

--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
             </ul>
             <a class="mobile-nav__link" href="tel:+380441111111">+38 044 111 11 11</a>
             <button class="btn-dark__mobile" type="button">ONLINE-BOOKING</button>
+            <ul class="mobile-link">
+              <li class="mobile-link__instagram">
+                <a
+                  class="link"
+                  href="https://Instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mobile-link__youtube">
+                <a
+                  class="link"
+                  href="https://Youtube.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
           </div>
         </header>
       </div>
