mobile prices done

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </ul>
         <div class="about-description">
           <p class="uppertitle">ABOUT</p>
-          <h2 class="title-dark">Best Barbershop in your city</h2>
+          <h2 class="title-about">Best Barbershop in <br/> your city</h2>
           <p class="subtitle">
             If you want to add more confidence to your image, you should definitely visit us.
           </p>
@@ -173,6 +173,36 @@
           <p class="uppertitle-light">spend your time with the best masters</p>
           <h2 class="title-light">Services and prices</h2>
           <div class="services-block">
+            <ul class="services-list__item-all">
+              <li class="services-list__item">
+                <span class="services-list__price">Men’s haircut</span><span>from 300 uah.</span>
+              </li>
+              <li class="services-list__item">
+                <span class="services-list__price">Beard trim</span><span>from 300 uah.</span>
+              </li>
+              <li class="services-list__item">
+                <span class="services-list__price">Mustache trim</span><span>from 200 uah.</span>
+              </li>
+              <li class="services-list__item">
+                <span class="services-list__price">Straight razor shave</span
+                ><span>from 200 uah.</span>
+              </li>            
+              <li class="services-list__item">
+                <span class="services-list__price">Trainee’s haircut</span><span>from 50 uah.</span>
+              </li>
+              <li class="services-list__item">
+                <span class="services-list__price">Haircut under the nozzle</span
+                ><span>from 200 uah.</span>
+              </li>
+              <li class="services-list__item">
+                <span class="services-list__price">Children’s haircut (0-12 y.o.)</span
+                ><span>from 300 uah.</span>
+              </li>
+              <li class="services-list__item">
+                <span class="services-list__price">Camouflage of gray hair</span
+                ><span>from 200 uah.</span>
+              </li>
+            </ul>
             <ul class="services-list__left">
               <li class="services-list__item">
                 <span class="services-list__price">Men’s haircut</span><span>from 300 uah.</span>
@@ -188,7 +218,6 @@
                 ><span>from 200 uah.</span>
               </li>
             </ul>
-
             <ul class="services-list__right">
               <li class="services-list__item">
                 <span class="services-list__price">Trainee’s haircut</span><span>from 50 uah.</span>
