benefits mobile done

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <p>
                 <span class="benefits-list__number"
                   >600<sup><span class="benefits-list__sub">&#43;</span></sup></span
-                ><br /><span class="benefits-list__text">Satisfied customers per day</span>
+                ><br /><span class="benefits-list__text">Satisfied customers<br />per day</span>
               </p>
             </li>
 
@@ -258,7 +258,7 @@
               <p>
                 <span class="benefits-list__number"
                   >50<sup><span class="benefits-list__sub">&#43;</span></sup></span
-                ><br /><span class="benefits-list__text">Awards for excellent service</span>
+                ><br /><span class="benefits-list__text">Awards for excellent<br />service</span>
               </p>
             </li>
 
@@ -266,7 +266,7 @@
               <p>
                 <span class="benefits-list__number"
                   >20<sup><span class="benefits-list__sub">&#43;</span></sup></span
-                ><br /><span class="benefits-list__text">Kyiv’s best barbers</span>
+                ><br /><span class="benefits-list__text">Kyiv’s best<br />barbers</span>
               </p>
             </li>
 
@@ -274,20 +274,19 @@
               <p>
                 <span class="benefits-list__number"
                   >100<sup><span class="benefits-list__sub">&#43;</span></sup></span
-                ><br /><span class="benefits-list__text">Gifts for regular customers</span>
+                ><br /><span class="benefits-list__text">Gifts for regular<br />customers</span>
               </p>
             </li>
           </ul>
         </div>
         <div class="benefits-description">
           <p class="uppertitle">old traditional school</p>
-          <h2 class="title-dark">
-            Why people come <br />
+          <h2 class="title-benefits">
+            <span class="title-question">&#191;</span>Why people come <br />
             to us?
           </h2>
-          <p class="subtitle">
-            Only good things are said about us. But it's better to see and feel 1 time than read 10
-            times.
+          <p class="subtitle-benefits">
+            Only good things are said about us. But it's<br />better to see and feel 1 time than read 10<br />times.
           </p>
         </div>
       </div>
