--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 media="(max-width: 767px)"
               />
               <img src="./images/team/team-2d@1x.jpg" alt="Michele Doe" />
-            </picture>            
+            </picture>
             <div class="team-card__title">
               <h3 class="team-card__name">Michele Doe</h3>
               <p class="team-card__text">Extreme Barber</p>
@@ -420,7 +420,7 @@
                 media="(max-width: 767px)"
               />
               <img src="./images/team/team-3d@1x.jpg" alt="Alan Black" />
-            </picture>                
+            </picture>
             <div class="team-card__title">
               <h3 class="team-card__name">Alan Black</h3>
               <p class="team-card__text">Extreme Barber</p>
@@ -470,70 +470,106 @@
           <li class="gallery-list__item">
             <picture class="gallery-card__img">
               <source
-                srcset="./images/gallery/gallery-1d@1x.jpg 1x, ./images/gallery/gallery-1d@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-1d@1x.jpg 1x,
+                  ./images/gallery/gallery-1d@2x.jpg 2x
+                "
                 media="(min-width: 1200px)"
               />
               <source
-                srcset="./images/gallery/gallery-1t@1x.jpg 1x, ./images/gallery/gallery-1t@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-1t@1x.jpg 1x,
+                  ./images/gallery/gallery-1t@2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
               <source
-                srcset="./images/gallery/gallery-1m@1x.jpg 1x, ./images/gallery/gallery-1m@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-1m@1x.jpg 1x,
+                  ./images/gallery/gallery-1m@2x.jpg 2x
+                "
                 media="(max-width: 767px)"
               />
               <img src="./images/gallery/gallery-1d@1x.jpg" alt="haircut" />
-            </picture>            
+            </picture>
           </li>
           <li class="gallery-list__item">
             <picture class="gallery-card__img">
               <source
-                srcset="./images/gallery/gallery-2d@1x.jpg 1x, ./images/gallery/gallery-2d@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-2d@1x.jpg 1x,
+                  ./images/gallery/gallery-2d@2x.jpg 2x
+                "
                 media="(min-width: 1200px)"
               />
               <source
-                srcset="./images/gallery/gallery-2t@1x.jpg 1x, ./images/gallery/gallery-2t@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-2t@1x.jpg 1x,
+                  ./images/gallery/gallery-2t@2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
               <source
-                srcset="./images/gallery/gallery-2m@1x.jpg 1x, ./images/gallery/gallery-2m@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-2m@1x.jpg 1x,
+                  ./images/gallery/gallery-2m@2x.jpg 2x
+                "
                 media="(max-width: 767px)"
               />
               <img src="./images/gallery/gallery-2d@1x.jpg" alt="shaving" />
-            </picture>            
-          </li>
-          <li class="gallery-list__item">
-          <picture class="gallery-card__img">
-              <source
-                srcset="./images/gallery/gallery-3d@1x.jpg 1x, ./images/gallery/gallery-3d@2x.jpg 2x"
-                media="(min-width: 1200px)"
-              />
-              <source
-                srcset="./images/gallery/gallery-3t@1x.jpg 1x, ./images/gallery/gallery-3t@2x.jpg 2x"
-                media="(min-width: 768px)"
-              />
-              <source
-                srcset="./images/gallery/gallery-3m@1x.jpg 1x, ./images/gallery/gallery-3m@2x.jpg 2x"
-                media="(max-width: 767px)"
-              />
-              <img src="./images/gallery/gallery-3d@1x.jpg" alt="compress" />
-            </picture>            
+            </picture>
           </li>
           <li class="gallery-list__item">
             <picture class="gallery-card__img">
               <source
-                srcset="./images/gallery/gallery-4d@1x.jpg 1x, ./images/gallery/gallery-4d@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-3d@1x.jpg 1x,
+                  ./images/gallery/gallery-3d@2x.jpg 2x
+                "
                 media="(min-width: 1200px)"
               />
               <source
-                srcset="./images/gallery/gallery-4t@1x.jpg 1x, ./images/gallery/gallery-4t@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-3t@1x.jpg 1x,
+                  ./images/gallery/gallery-3t@2x.jpg 2x
+                "
                 media="(min-width: 768px)"
               />
               <source
-                srcset="./images/gallery/gallery-4m@1x.jpg 1x, ./images/gallery/gallery-4m@2x.jpg 2x"
+                srcset="
+                  ./images/gallery/gallery-3m@1x.jpg 1x,
+                  ./images/gallery/gallery-3m@2x.jpg 2x
+                "
+                media="(max-width: 767px)"
+              />
+              <img src="./images/gallery/gallery-3d@1x.jpg" alt="compress" />
+            </picture>
+          </li>
+          <li class="gallery-list__item">
+            <picture class="gallery-card__img">
+              <source
+                srcset="
+                  ./images/gallery/gallery-4d@1x.jpg 1x,
+                  ./images/gallery/gallery-4d@2x.jpg 2x
+                "
+                media="(min-width: 1200px)"
+              />
+              <source
+                srcset="
+                  ./images/gallery/gallery-4t@1x.jpg 1x,
+                  ./images/gallery/gallery-4t@2x.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
+              <source
+                srcset="
+                  ./images/gallery/gallery-4m@1x.jpg 1x,
+                  ./images/gallery/gallery-4m@2x.jpg 2x
+                "
                 media="(max-width: 767px)"
               />
               <img src="./images/gallery/gallery-4d@1x.jpg" alt="edging" />
-            </picture>              
+            </picture>
           </li>
         </ul>
       </div>
@@ -543,7 +579,7 @@
     <div class="double-section" id="contacts">
       <section>
         <div class="container">
-          <div class="booking">
+          <div class="booking section">
             <h2 class="title-light">Online-booking</h2>
             <div class="booking-form">
               <div class="booking-form__item">
@@ -574,49 +610,51 @@
               id="comment"
               placeholder="message"
             ></textarea>
-            <button class="btn-light" type="button">send</button>
-          </div>
-          <div class="contacts">
-            <h2 class="title-light">Contacts</h2>
-            <address class="contacts-adress">
-              <ul class="contacts-list">
-                <li class="contacts-list__item">
-                  <a
-                    class="contacts-list__link"
-                    href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                  >
-                    <svg class="contacts-list__icon">
-                      <use href="./images/icons.svg#icon-map-pin"></use>
-                    </svg>
-                    st. Vasilkovaya,<br />7A Kiev, 08132
-                  </a>
-                </li>
-                <li class="contacts-list__item">
-                  <a class="contacts-list__link" href="barbershop@email.com">
-                    <svg class="contacts-list__icon">
-                      <use href="./images/icons.svg#icon-mail-footer"></use>
-                    </svg>
-                    barbershop@email.com
-                  </a>
-                </li>
-                <li class="contacts-list__item">
-                  <a class="contacts-list__link" href="tel:+380961111111">
-                    <svg class="contacts-list__icon">
-                      <use href="./images/icons.svg#icon-phone-footer"></use>
-                    </svg>
-                    +38 096 111 11 11
-                  </a>
-                </li>
-              </ul>
-            </address>
-            <p class="contacts__hours-title">working hours</p>
-            <p class="contacts__hours-time">
-              Every day from <time>09:00</time> to <time>22:00</time>
-            </p>
+            <button class="btn-light__booking" type="button">send</button>
           </div>
         </div>
+          <div class="contacts-bg">
+            <div class="contacts section">
+              <h2 class="title-light">Contacts</h2>
+              <address class="contacts-adress">
+                <ul class="contacts-list">
+                  <li class="contacts-list__item">
+                    <a
+                      class="contacts-list__link"
+                      href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="contacts-list__icon">
+                        <use href="./images/icons.svg#icon-map-pin"></use>
+                      </svg>
+                      st. Vasilkovaya, <br class="contacts-list__link-transfer" />7A Kiev, 08132
+                    </a>
+                  </li>
+                  <li class="contacts-list__item">
+                    <a class="contacts-list__link" href="barbershop@email.com">
+                      <svg class="contacts-list__icon">
+                        <use href="./images/icons.svg#icon-mail-footer"></use>
+                      </svg>
+                      barbershop@email.com
+                    </a>
+                  </li>
+                  <li class="contacts-list__item">
+                    <a class="contacts-list__link" href="tel:+380961111111">
+                      <svg class="contacts-list__icon">
+                        <use href="./images/icons.svg#icon-phone-footer"></use>
+                      </svg>
+                      +38 096 111 11 11
+                    </a>
+                  </li>
+                </ul>
+              </address>
+              <p class="contacts__hours-title">working hours</p>
+              <p class="contacts__hours-time">
+                Every day from <time>09:00</time> to <time>22:00</time>
+              </p>
+            </div>
+          </div>        
       </section>
     </div>
 
